project(7zip)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")

# Flags
set(EXTRA_FLAGS "-m64 -s -pipe -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_REENTRANT -DENV_UNIX -D_7ZIP_LARGE_PAGES  -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_REENTRANT -DENV_UNIX -DBREAK_HANDLER -DUNICODE -D_UNICODE -DUNIX_USE_WIN_FILE")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_FLAGS} -std=c++14")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -g -O0")
set(CMAKE_C++FLAGS_DEBUG "${CMAKE_C++FLAGS} -g -O0")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -DNDEBUG")
set(CMAKE_C++FLAGS_RELEASE "${CMAKE_C++FLAGS} -O3 -DNDEBUG")

# Include directory (to fill...)
include_directories(include)

# Mega-library definition
add_library(7zlib
  c/Ppmd8.c
  c/Sort.c
  c/Ppmd8Dec.c
  c/7zCrcOpt.c
  c/Threads.c
  c/LzmaEnc.c
  c/LzFind.c
  c/MtCoder.c
  c/Alloc.c
  c/Sha1.c
  c/LzmaDec.c
  c/Sha256.c
  c/BraIA64.c
  c/XzEnc.c
  c/CpuArch.c
  c/Ppmd7Enc.c
  c/XzCrc64.c
  c/Bcj2.c
  c/Lzma2Enc.c
  c/Ppmd8Enc.c
  c/XzCrc64Opt.c
  c/BwtSort.c
  c/7zCrc.c
  c/Lzma2Dec.c
  c/HuffEnc.c
  c/Ppmd7Dec.c
  c/7zStream.c
  c/XzDec.c
  c/Aes.c
  c/Xz.c
  c/LzFindMt.c
  c/Ppmd7.c
  c/XzIn.c
  c/Bcj2Enc.c
  c/Bra.c
  c/Delta.c
  c/Bra86.c
  c++/XzCrc64Reg.cpp
  c++/OffsetStream.cpp
  c++/7zSpecStream.cpp
  c++/BranchRegister.cpp
  c++/UpdateProduce.cpp
  c++/StreamBinder.cpp
  c++/MyString.cpp
  c++/PpmdEncoder.cpp
  c++/TarUpdate.cpp
  c++/UpdatePair.cpp
  c++/CreateCoder.cpp
  c++/Lzma2Decoder.cpp
  c++/ZipItem.cpp
  c++/7zCompressionMode.cpp
  c++/InStreamWithCRC.cpp
  c++/UpdateCallbackConsole.cpp
  c++/DeflateProps.cpp
  c++/Bcj2Coder.cpp
  c++/StreamObjects.cpp
  c++/Bench.cpp
  c++/SetProperties.cpp
  c++/CabHandler.cpp
  c++/BenchCon.cpp
  c++/IntToString.cpp
  c++/FileStreams.cpp
  c++/FilterCoder.cpp
  c++/LzmaEncoder.cpp
  c++/TarOut.cpp
  c++/List.cpp
  c++/7zAes.cpp
  c++/7zProperties.cpp
  c++/DeltaFilter.cpp
  c++/wine_date_and_time.cpp
  c++/HandlerOut.cpp
  c++/mySplitCommandLine.cpp
  c++/Bcj2Register.cpp
  c++/ItemNameUtils.cpp
  c++/StdOutStream.cpp
  c++/InOutTempBuffer.cpp
  c++/OutMemStream.cpp
  c++/DeflateRegister.cpp
  c++/FilePathAutoRename.cpp
  c++/WzAes.cpp
  c++/LzOutWindow.cpp
  c++/BZip2Crc.cpp
  c++/QuantumDecoder.cpp
  c++/HmacSha1.cpp
  c++/7zIn.cpp
  c++/PpmdDecoder.cpp
  c++/OutStreamWithCRC.cpp
  c++/ConsoleClose.cpp
  c++/FileFind.cpp
  c++/PropVariantConv.cpp
  c++/MethodId.cpp
  c++/ErrorMsg.cpp
  c++/LzmaRegister.cpp
  c++/BranchMisc.cpp
  c++/7zFolderInStream.cpp
  c++/ZipRegister.cpp
  c++/MainAr.cpp
  c++/ExtractCallbackConsole.cpp
  c++/HashCon.cpp
  c++/CabBlockInStream.cpp
  c++/MultiStream.cpp
  c++/FileName.cpp
  c++/7zEncode.cpp
  c++/UpdateCallback.cpp
  c++/StreamUtils.cpp
  c++/UserInputUtils.cpp
  c++/TarHandlerOut.cpp
  c++/MyAes.cpp
  c++/TarRegister.cpp
  c++/ByteSwap.cpp
  c++/ZDecoder.cpp
  c++/UpdateAction.cpp
  c++/PpmdHandler.cpp
  c++/BcjRegister.cpp
  c++/ProgressUtils.cpp
  c++/OutBuffer.cpp
  c++/DeflateDecoder.cpp
  c++/7zDecode.cpp
  c++/ZipAddCommon.cpp
  c++/7zRegister.cpp
  c++/DeflateEncoder.cpp
  c++/ListFileUtils.cpp
  c++/MyVector.cpp
  c++/CabRegister.cpp
  c++/ParseProperties.cpp
  c++/UniqBlocks.cpp
  c++/CopyCoder.cpp
  c++/PropIDUtils.cpp
  c++/ShrinkDecoder.cpp
  c++/BZip2Decoder.cpp
  c++/FileIO.cpp
  c++/7zHeader.cpp
  c++/ZipHandlerOut.cpp
  c++/Sha256Reg.cpp
  c++/DefaultName.cpp
  c++/HashCalc.cpp
  c++/ProgressMt.cpp
  c++/BZip2Encoder.cpp
  c++/DummyOutStream.cpp
  c++/CabIn.cpp
  c++/FindSignature.cpp
  c++/LzxDecoder.cpp
  c++/OpenCallbackConsole.cpp
  c++/StdInStream.cpp
  c++/CabHeader.cpp
  c++/TarHeader.cpp
  c++/MethodProps.cpp
  c++/CRC.cpp
  c++/StringConvert.cpp
  c++/ZipOut.cpp
  c++/ArchiveCommandLine.cpp
  c++/PpmdRegister.cpp
  c++/TimeUtils.cpp
  c++/7zHandler.cpp
  c++/CrcReg.cpp
  c++/Wildcard.cpp
  c++/CopyRegister.cpp
  c++/TarIn.cpp
  c++/MyAesReg.cpp
  c++/LzmaDecoder.cpp
  c++/BitlDecoder.cpp
  c++/CommandLineParser.cpp
  c++/MemBlocks.cpp
  c++/SortUtils.cpp
  c++/Extract.cpp
  c++/PpmdZip.cpp
  c++/XzHandler.cpp
  c++/StringToInt.cpp
  c++/SplitHandler.cpp
  c++/Lzma2Register.cpp
  c++/BZip2Register.cpp
  c++/TarHandler.cpp
  c++/LoadCodecs.cpp
  c++/ZipCrypto.cpp
  c++/TempFiles.cpp
  c++/LzmaHandler.cpp
  c++/FileDir.cpp
  c++/Bz2Handler.cpp
  c++/ImplodeHuffmanDecoder.cpp
  c++/ExtractingFilePath.cpp
  c++/ArchiveExtractCallback.cpp
  c++/7zAesRegister.cpp
  c++/LimitedStreams.cpp
  c++/ImplodeDecoder.cpp
  c++/Pbkdf2HmacSha1.cpp
  c++/ZipUpdate.cpp
  c++/ZipHandler.cpp
  c++/ZipStrong.cpp
  c++/UTFConvert.cpp
  c++/7zHandlerOut.cpp
  c++/BcjCoder.cpp
  c++/ZipIn.cpp
  c++/CoderMixer2.cpp
  c++/Lzma2Encoder.cpp
  c++/RandGen.cpp
  c++/GzHandler.cpp
  c++/Update.cpp
  c++/Synchronization.cpp
  c++/MyWindows.cpp
  c++/Sha1Reg.cpp
  c++/ZHandler.cpp
  c++/myAddExeFlag.cpp
  c++/OpenArchive.cpp
  c++/7zOut.cpp
  c++/InBuffer.cpp
  c++/VirtThread.cpp
  c++/System.cpp
  c++/7zExtract.cpp
  c++/7zUpdate.cpp
  c++/PropVariant.cpp
  c++/EnumDirItems.cpp
  c++/PropId.cpp
  c++/Deflate64Register.cpp
  c++/ArchiveOpenCallback.cpp
  c++/PercentPrinter.cpp
  c++/CWrappers.cpp
)

add_executable(7z c++/Main.cpp)
target_link_libraries(7z 7zlib pthread)
